Q5 - counting vowels with max count

--- a/play/incedo_questions/main.ipynb
+++ b/play/incedo_questions/main.ipynb
@@ -12,25 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "0019b8ac",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Importing o1_string_reverse\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Main file to run all these methods\n",
     "\n",
     "from q1_string_reverse import reverse_string\n",
     "from q2_sum_of_numbers import sum_list\n",
     "from q3_check_odd_even import check_even_odd\n",
-    "from q4_factorial import factorial"
+    "from q4_factorial import factorial\n",
+    "from q5_counts_vowels import count_vowels"
    ]
   },
   {
@@ -140,6 +133,34 @@
    "source": [
     "input_num = int(input(\"Enter a number = \"))\n",
     "print(f\"The factorial of {input_num} is {str(factorial(input_num))}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af8456d6",
+   "metadata": {},
+   "source": [
+    "### Q5 - Counting the vowel with maximum count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ca86cb70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o is the vowel with the maximum count that is 2 in the input string hellooiyu\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_string = input(\"Enter a string = \")\n",
+    "max_value, max_vowel = count_vowels(input_string)\n",
+    "print(f\"{max_vowel} is the vowel with the maximum count that is {max_value} in the input string {input_string}\")"
    ]
   }
  ],
