adding of palidrome and modifying other files

--- a/play/incedo_questions/main.ipynb
+++ b/play/incedo_questions/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "0019b8ac",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,9 @@
     "from q2_sum_of_numbers import sum_list\n",
     "from q3_check_odd_even import check_even_odd\n",
     "from q4_factorial import factorial\n",
-    "from q5_counts_vowels import count_vowels"
+    "from q5_counts_vowels import count_vowels\n",
+    "from q6_maximum_value import find_max\n",
+    "from q7_palindrome import is_palindrome"
    ]
   },
   {
@@ -161,6 +163,60 @@
     "input_string = input(\"Enter a string = \")\n",
     "max_value, max_vowel = count_vowels(input_string)\n",
     "print(f\"{max_vowel} is the vowel with the maximum count that is {max_value} in the input string {input_string}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d149184",
+   "metadata": {},
+   "source": [
+    "#### Q6 - Find the maximum value from numbers list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fe23f4e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The maximum value from the list [3, 1, 4, 1, 5] is 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_numbers = [3, 1, 4, 1, 5]\n",
+    "print(f\"The maximum value from the list {input_numbers} is {find_max(input_numbers)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c7f66bc",
+   "metadata": {},
+   "source": [
+    "### Q7 - Check if string is palindrome (case-insensitive)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f21649e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "none -> False\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_str = input(\"Enter the string \")\n",
+    "print(f\"{input_str} -> {is_palindrome(input_str)}\")"
    ]
   }
  ],
