Changes in main.py

--- a/play/incedo_questions/main.ipynb
+++ b/play/incedo_questions/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "0019b8ac",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,9 @@
     "from q4_factorial import factorial\n",
     "from q5_counts_vowels import count_vowels\n",
     "from q6_maximum_value import find_max\n",
-    "from q7_palindrome import is_palindrome"
+    "from q7_palindrome import is_palindrome\n",
+    "from q8_duplicate import remove_duplicates\n",
+    "from q9_frequency import frequency_of_words"
    ]
   },
   {
@@ -217,6 +219,63 @@
    "source": [
     "input_str = input(\"Enter the string \")\n",
     "print(f\"{input_str} -> {is_palindrome(input_str)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3493506",
+   "metadata": {},
+   "source": [
+    "#### Q8 Remove Duplicate from the input list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8ad2019e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The list [1, 2, 3, 4, 2, 3] after removing duplicates is [1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_list_d = [1, 2, 3, 4, 2, 3]\n",
+    "print(f\"The list {input_list_d} after removing duplicates is {remove_duplicates(input_list_d)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ed8c61f",
+   "metadata": {},
+   "source": [
+    "#### Q9 Frequency of each word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f0c520ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The frequency of each word of the string \n",
+      "the great dog is not the great cat \n",
+      "is the following - \n",
+      "{'the': 2, 'great': 2, 'dog': 1, 'is': 1, 'not': 1, 'cat': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_str_w = input(\"Enter the string\")\n",
+    "print(f\"The frequency of each word of the string \\n{input_str_w} \\nis the following - \\n{frequency_of_words(input_str_w)}\")"
    ]
   }
  ],
