Restructuring and solving of q11 and q12

--- a/play/incedo_questions/q1_q10/main.ipynb
+++ b/play/incedo_questions/q1_q10/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "0019b8ac",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,8 @@
     "from q6_maximum_value import find_max\n",
     "from q7_palindrome import is_palindrome\n",
     "from q8_duplicate import remove_duplicates\n",
-    "from q9_frequency import frequency_of_words"
+    "from q9_frequency import frequency_of_words\n",
+    "from q10_joining_words import join_words"
    ]
   },
   {
@@ -276,6 +277,40 @@
    "source": [
     "input_str_w = input(\"Enter the string\")\n",
     "print(f\"The frequency of each word of the string \\n{input_str_w} \\nis the following - \\n{frequency_of_words(input_str_w)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19268018",
+   "metadata": {},
+   "source": [
+    "#### Q10 Joining words with space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "57ea1f29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The list of words is - \n",
+      "['hello', 'hi', 'rou', 'tou']\n",
+      "and the joined words look like this\n",
+      "hello hi rou tou\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_of_words = int(input(\"Enter the number of words\"))\n",
+    "words_list = []\n",
+    "for _ in range(num_of_words):\n",
+    "    words_list.append(input(\"Enter the word\"))\n",
+    "print(f\"\\nThe list of words is - \\n{words_list}\\nand the joined words look like this\\n{join_words(words_list)}\")"
    ]
   }
  ],
