Solution for question 13

--- a/play/incedo_questions/q11_q20/main.ipynb
+++ b/play/incedo_questions/q11_q20/main.ipynb
@@ -18,7 +18,8 @@
    "outputs": [],
    "source": [
     "from q11_character_count import count_chars\n",
-    "from q12_squares_nums import square_odds"
+    "from q12_squares_nums import square_odds\n",
+    "from q13_rotate_list import rotate_list"
    ]
   },
   {
@@ -59,6 +60,29 @@
    "source": [
     "input_list12 = [1, 2, 4, 5]\n",
     "print (f\"The {input_list12} has the following sqaure odds : {square_odds(input_list12)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9a67c9fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Input is [1, 2, 3, 4, 5, 6]\n",
+      "k is 4 \n",
+      "Output is :[3, 4, 5, 6, 1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_list13 = [1, 2, 3, 4, 5, 6]\n",
+    "k = 4\n",
+    "print(f\"\\nInput is {input_list13}\\nk is {k} \\nOutput is :{rotate_list(input_list13, k)}\")"
    ]
   }
  ],
