Solving the 4th question from incedo_questions

--- a/play/practice.ipynb
+++ b/play/practice.ipynb
@@ -12,7 +12,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "id": "cfb032ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Try programiz.pro\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Online Python compiler (interpreter) to run Python online.\n",
+    "# Write Python 3 code in this online editor and run it.\n",
+    "print(\"Try programiz.pro\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6f41bead",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Q4. Write a function to compute the factorial of a non-negative integer.\n",
+    "number = 5\n",
+    "def factorial(num: int) -> int:\n",
+    "    factorial = 1\n",
+    "    while num != 0:\n",
+    "        factorial *= num\n",
+    "        num -= 1\n",
+    "    return factorial\n",
+    "print(factorial(number))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "1ab86180",
    "metadata": {},
    "outputs": [
@@ -20,16 +66,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Try programiz.pro\n",
       "even\n"
      ]
     }
    ],
    "source": [
-    "# Online Python compiler (interpreter) to run Python online.\n",
-    "# Write Python 3 code in this online editor and run it.\n",
-    "print(\"Try programiz.pro\")\n",
-    "\n",
     "# Q3. Write a function that takes an integer and return \"even\" if its even, \"odd\" if its odd\n",
     "num = 4\n",
     "\n",
@@ -45,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ae9b2eb8",
    "metadata": {},
    "outputs": [
@@ -68,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "f76aa25c",
    "metadata": {},
    "outputs": [
