Solving the 4th question from incedo_questions

--- a/play/practice.ipynb
+++ b/play/practice.ipynb
@@ -12,6 +12,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "ef18dccf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Different types of inputs\n",
+    "num = 4                     # Int type\n",
+    "input_nums = [1,2,3,4,5]    # List of integers\n",
+    "input_str=\"HellOoll\"           # String"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a3d96bfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Q5. Write a function that counts the number of vowels (a, e, i, o, u) in a string.\n",
+    "def count_vowels(input_str: str) -> int:\n",
+    "    vowel_cnt = 0\n",
+    "    for char in input_str:\n",
+    "        if char in \"aeiouAEIOU\":\n",
+    "            vowel_cnt += 1\n",
+    "    return vowel_cnt\n",
+    "print(count_vowels(input_str))\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c81deaa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "cfb032ad",
    "metadata": {},
