Solving question 7 - Palindrome check

--- a/incedo_questions/practice_days/Oct30th.ipynb
+++ b/incedo_questions/practice_days/Oct30th.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "2eee62e6",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,37 @@
     "# Different types of inputs\n",
     "num = 4                     # Int type\n",
     "input_nums = [1,2,3,4,5]    # List of integers\n",
-    "input_str=\"HellOoll\"           # String"
+    "input_str=\"HellOoll\"           # String\n",
+    "input_str1=\"LOLVA\"           # String"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d56b0d41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The input_str LOLVA is a palindrome: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Q7. Write a function that checks if a string is palindrome (case-insensitive)\n",
+    "\n",
+    "def is_palindrome(input_str: str) -> bool:\n",
+    "    input_str = input_str.lower()\n",
+    "    for char in input_str:\n",
+    "        if input_str[::] != input_str[::-1]:\n",
+    "            return False\n",
+    "            break\n",
+    "        else:\n",
+    "            return True\n",
+    "\n",
+    "print(f\"The input_str {input_str1} is a palindrome: {is_palindrome(input_str1)}\")"
    ]
   },
   {
