Solving question no 9 from incedo - calculating the frequency of each word

--- a/incedo_questions/practice_days/Oct31st.ipynb
+++ b/incedo_questions/practice_days/Oct31st.ipynb
@@ -5,7 +5,7 @@
    "id": "e38fc4d5",
    "metadata": {},
    "source": [
-    "## Practice Date - 30th October 2025\n",
+    "## Practice Date - 31st October 2025\n",
     "\n",
     "Using Online compiler - programiz.com"
    ]
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "2eee62e6",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,8 @@
     "num = 4                     # Int type\n",
     "input_nums = [1,1,1,2,3,1,7,5]    # List of integers\n",
     "input_str=\"HellOoll\"           # String\n",
-    "input_str1=\"LOLVA\"           # String"
+    "input_str1=\"LOLVA\"           # String\n",
+    "input_sentence = \"Hello this is India and I love India\""
    ]
   },
   {
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b288ebdc",
    "metadata": {},
    "outputs": [
@@ -97,16 +98,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The max of [1, 2, 3, 4, 5] is 5\n"
+      "['Hello', 'this', 'is', 'India', 'and', 'I', 'love', 'India']\n",
+      "{'Hello': 1, 'this': 1, 'is': 1, 'India': 2, 'and': 1, 'I': 1, 'love': 1}\n"
      ]
     }
    ],
    "source": [
-    "# Q6. Write a function that takes a list of numbers and returns the maximum value.\n",
-    "def find_max(input_nums: list[int])-> int:\n",
-    "    return max(input_nums)\n",
+    "# Q9. Write a function that takes a string and returns a dictionary \n",
+    "# with the frequency of each word.\n",
+    "\"\"\"\n",
+    "create a hashmap\n",
+    "if word from original list does not exist in hashmap then :\n",
+    "    1. transfer the char into hashmap as key\n",
+    "    2. count as 1\n",
+    "else if word from original list exists in hashmap then:\\\n",
+    "    1. count += 1\n",
+    "\"\"\"\n",
+    "def word_frequency(input_str: str)-> dict:\n",
+    "    sentence_as_list_of_words = input_str.split(sep=\" \")\n",
+    "    count_of_words = {}\n",
+    "    for word in sentence_as_list_of_words:\n",
+    "        if word in count_of_words:\n",
+    "            count_of_words[word] += 1\n",
+    "        else:\n",
+    "            count_of_words[word] = 1\n",
+    "    return count_of_words\n",
     "\n",
-    "print(f\"The max of {input_nums} is {max(input_nums)}\")\n",
+    "\n",
+    "print(word_frequency(input_sentence))\n",
+    "\n",
     "    "
    ]
   }
