Solved Q10 - joining words and Q11 - Finding count of chars in a string

--- a/incedo_questions/practice_days/Oct31st.ipynb
+++ b/incedo_questions/practice_days/Oct31st.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "id": "c8c09210",
    "metadata": {},
    "outputs": [
@@ -41,27 +41,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 1, 1, 2, 3, 1, 7, 5] and [1, 2, 3, 5, 7]\n",
-      "None\n",
-      "[1, 2, 3, 5, 7]\n"
+      "The count of characters in HellOoll is \n",
+      "{'H': 1, 'e': 1, 'l': 4, 'O': 1, 'o': 1}\n"
      ]
     }
    ],
    "source": [
-    "# Q8. Write a function that removes duplicates from a list and returns the result\n",
+    "# Q11. Write a function that returns a dictionary of character counts in a string.\n",
+    "def count_chars(input_str: str) -> dict:\n",
+    "    count_of_chars = {}\n",
+    "    for char in input_str:\n",
+    "        if char in count_of_chars:\n",
+    "            count_of_chars[char] +=1\n",
+    "        else: \n",
+    "            count_of_chars[char] = 1\n",
+    "    return count_of_chars\n",
     "\n",
-    "def remove_duplicates(input_nums: list[int]) -> list[int]:\n",
-    "    return list(set(input_nums))\n",
-    "\n",
-    "print(f\"{input_nums} and {remove_duplicates(input_nums)}\")\n",
-    "print(input_nums.sort())\n",
-    "print(list(set(input_nums)))\n",
-    "\n"
+    "print(f\"The count of characters in {input_str} is \\n{count_chars(input_str)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "d56b0d41",
    "metadata": {},
    "outputs": [
@@ -69,24 +70,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The input_str LOLVA is a palindrome: False\n"
+      "The list of words as input is: ['Hello', 'this', 'is', 'India', 'and', 'I', 'love', 'India']\n",
+      "The joined version is \n",
+      "Hello this is India and I love India\n"
      ]
     }
    ],
    "source": [
-    "# Q7. Write a function that checks if a string is palindrome (case-insensitive)\n",
+    "# Q10. Write a function that takes a list of words and joins them \n",
+    "# into a single string with spaces using join()\n",
+    "list_of_words = input_sentence.split(\" \")\n",
+    "print(f\"The list of words as input is: {list_of_words}\")\n",
     "\n",
-    "def is_palindrome(input_str: str) -> bool:\n",
-    "    input_str = input_str.lower()\n",
-    "    for char in input_str:\n",
-    "        if input_str[::] != input_str[::-1]:\n",
-    "            return False\n",
-    "            break\n",
-    "        else:\n",
-    "            return True\n",
+    "def join_words(input_list_of_words: list[str])-> str:\n",
+    "    return \" \".join(list_of_words)\n",
     "\n",
-    "print(f\"The input_str {input_str1} is a palindrome: {is_palindrome(input_str1)}\")"
+    "print(f\"The joined version is \\n{join_words(list_of_words)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29014a13",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
