Solved question 14 - Sorting according to key in a list of dictionaries

--- a/incedo_questions/q11_q20/main.ipynb
+++ b/incedo_questions/q11_q20/main.ipynb
@@ -19,7 +19,8 @@
    "source": [
     "from q11_character_count import count_chars\n",
     "from q12_squares_nums import square_odds\n",
-    "from q13_rotate_list import rotate_list"
+    "from q13_rotate_list import rotate_list\n",
+    "from q14_sort_dict import sort_dict"
    ]
   },
   {
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "64f78885",
    "metadata": {},
    "outputs": [
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9a67c9fb",
    "metadata": {},
    "outputs": [
@@ -84,6 +85,28 @@
     "k = 4\n",
     "print(f\"\\nInput is {input_list13}\\nk is {k} \\nOutput is :{rotate_list(input_list13, k)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0a1749c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The input list is [{'name': 'Bob', 'age': 25}, {'name': 'Alice', 'age': 30}]\n",
+      "The output sorted list is[{'name': 'Alice', 'age': 30}, {'name': 'Bob', 'age': 25}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_list14 = [{\"name\": \"Bob\", \"age\" : 25},\n",
+    "                {\"name\": \"Alice\", \"age\" : 30}]\n",
+    "print(f\"The input list is {input_list14}\")\n",
+    "print(f\"The output sorted list is{sort_dict(input_list14)}\")"
+   ]
   }
  ],
  "metadata": {
@@ -102,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
