Solving question 15 from incedo questions

--- a/incedo_questions/q11_q20/main.ipynb
+++ b/incedo_questions/q11_q20/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "10bd05e4",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,8 @@
     "from q11_character_count import count_chars\n",
     "from q12_squares_nums import square_odds\n",
     "from q13_rotate_list import rotate_list\n",
-    "from q14_sort_dict import sort_dict"
+    "from q14_sort_dict import sort_dict\n",
+    "from q15_average_list import average_list"
    ]
   },
   {
