Updating the main.ipynb

--- a/incedo_questions/q11_q20/main.ipynb
+++ b/incedo_questions/q11_q20/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "10bd05e4",
    "metadata": {},
    "outputs": [],
@@ -107,6 +107,37 @@
     "                {\"name\": \"Alice\", \"age\" : 30}]\n",
     "print(f\"The input list is {input_list14}\")\n",
     "print(f\"The output sorted list is{sort_dict(input_list14)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ab2384ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "average_list() missing 1 required positional argument: 'input_list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m input_list15 = [\u001b[32m1\u001b[39m,\u001b[32m2\u001b[39m,\u001b[32m3\u001b[39m,\u001b[32m4\u001b[39m,\u001b[32m5\u001b[39m]\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(average_list(input_list15))\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43maverage_list\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[31mTypeError\u001b[39m: average_list() missing 1 required positional argument: 'input_list'"
+     ]
+    }
+   ],
+   "source": [
+    "input_list15 = [1,2,3,4,5]\n",
+    "print(average_list(input_list15))\n",
+    "print(average_list())"
    ]
   }
  ],
