--- a/incedo_questions/practice_days/11-nov/nov10.ipynb
+++ b/incedo_questions/practice_days/11-nov/nov10.ipynb
@@ -9,11 +9,65 @@
     "\n",
     "Using Online compiler - programiz.com"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "758a8171",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Different types of inputs\n",
+    "num = 4                     # Int type\n",
+    "input_nums = [1,1,1,2,3,1,4,5]    # List of integers\n",
+    "input_str=\"HellOoll\"           # String\n",
+    "input_str1=\"LOLVA\"           # String\n",
+    "input_sentence = \"Hello this is India and I love India\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0199ea4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5, 1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Q13. Write a function that rotates a list to the right by k steps using slicing.\n",
+    "# Example - rotate_list([1,2,3,4,5], 2) -> [4,5,1,2,3]\n",
+    "def rotate_list(input_list: list[int], rotate_steps: int) -> list[int] | None:\n",
+    "    break_index = len(input_list)-rotate_steps\n",
+    "    output_list = input_list[break_index::] + input_list[:break_index:]\n",
+    "    return output_list\n",
+    "\n",
+    "print(rotate_list([1,2,3,4,5],2))\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "personal",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
