solving of new question q16 - second largest

--- a/incedo_questions/q11_q20/main.ipynb
+++ b/incedo_questions/q11_q20/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "10bd05e4",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,8 @@
     "from q12_squares_nums import square_odds\n",
     "from q13_rotate_list import rotate_list\n",
     "from q14_sort_dict import sort_dict\n",
-    "from q15_average_list import average_list"
+    "from q15_average_list import average_list\n",
+    "from q16_second_largest import second_largest"
    ]
   },
   {
@@ -128,6 +129,17 @@
     "input_list15 = [1,2,3,4,5]\n",
     "print(average_list(input_list15))\n",
     "print(average_list())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9764563b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_list16 = [1,2,3,4,5]\n",
+    "print(second_largest(input_list16))"
    ]
   }
  ],
