Repeating Q10: joining words

--- a/incedo_questions/practice_days/11-nov/nov14.ipynb
+++ b/incedo_questions/practice_days/11-nov/nov14.ipynb
@@ -50,6 +50,36 @@
     "\n",
     "print(square_odds(input_list))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "898f91d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (240955995.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mlist of words = [\u001b[39m\n         ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Q10. Write a function that takes a list of words and \n",
+    "# joins them into a single string with spaces using join()\n",
+    "# Example - join_words([\"hello\",\"world\"]) -> \"hello world\"\n",
+    "\n",
+    "list_of_words = [\n",
+    "    \"Hello\",\n",
+    "    \"World\"\n",
+    "]\n",
+    "def join_words(list_words:list[str])-> str:\n",
+    "    return \" \".join(list_words)\n",
+    "\n",
+    "print(join_words(list_of_words))"
+   ]
   }
  ],
  "metadata": {
