Solving of new question q17 - is_prime

--- a/incedo_questions/q11_q20/main.ipynb
+++ b/incedo_questions/q11_q20/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "10bd05e4",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,8 @@
     "from q13_rotate_list import rotate_list\n",
     "from q14_sort_dict import sort_dict\n",
     "from q15_average_list import average_list\n",
-    "from q16_second_largest import second_largest"
+    "from q16_second_largest import second_largest\n",
+    "from q17_is_prime import is_prime"
    ]
   },
   {
@@ -133,13 +134,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9764563b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "input_list16 = [1,2,3,4,5]\n",
     "print(second_largest(input_list16))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83f70bb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 is a Prime number False\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_num = 6\n",
+    "print(f\"{input_num} is a Prime number {is_prime(input_num)}\")"
    ]
   }
  ],
