PP-5 Revising Q9 - word frequency

--- a/incedo_questions/practice_days/12-dec/dec02.ipynb
+++ b/incedo_questions/practice_days/12-dec/dec02.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "85dcd2c5",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'hello'} has the following count of chars {'hello': 1}\n"
+      "hello has the following count of chars {'h': 1, 'e': 1, 'l': 2, 'o': 1}\n"
      ]
     }
    ],
@@ -47,6 +47,44 @@
     "    return output_dict\n",
     "\n",
     "print(f\"{str(input_string)} has the following count of chars {count_chars(input_string)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "55bc0610",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The word count in the string Surya was the son of son of Rohan and the best person is \n",
+      " {'Surya': 1, 'was': 1, 'the': 2, 'son': 2, 'of': 2, 'Rohan': 1, 'and': 1, 'best': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Q9. Write a function that takes a string and returns a dictionary with the frequency of each word\n",
+    "# Example: word_frequency(\"the cat the dog\") -> {\"the\": 2, \"cat\": 1, \"dog\": 1}\n",
+    "\n",
+    "input_string = \"Surya was the son of son of Rohan and the best person\"\n",
+    "\n",
+    "def word_frequency(input_str: str) -> dict:\n",
+    "    word_count = {}\n",
+    "    word = \"\"\n",
+    "    for char in input_str:\n",
+    "        if char == \" \":\n",
+    "            if word in word_count:\n",
+    "                word_count[word] += 1\n",
+    "            else:\n",
+    "                word_count[word] = 1 \n",
+    "            word = \"\"\n",
+    "        else:\n",
+    "            word += char\n",
+    "    return word_count\n",
+    "            \n",
+    "print (f\"The word count in the string {input_string} is \\n {word_frequency(input_string)}\")"
    ]
   }
  ],
