Solving of new question Q18 - list_primes

--- a/incedo_questions/q11_q20/main.ipynb
+++ b/incedo_questions/q11_q20/main.ipynb
@@ -23,12 +23,23 @@
     "from q14_sort_dict import sort_dict\n",
     "from q15_average_list import average_list\n",
     "from q16_second_largest import second_largest\n",
-    "from q17_is_prime import is_prime"
+    "from q17_is_prime import is_prime\n",
+    "from q18_list_primes import list_primes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f3e1dd3",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Question 11: Write a function that returns a dictionary of character counts in a string\n",
+    "Example: count_chars(\"hello\") → {'h': 1, 'e': 1, 'l': 2, 'o': 1}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a1ae7d6d",
    "metadata": {},
    "outputs": [
@@ -43,8 +54,17 @@
    ],
    "source": [
     "input_str11 = input(\"Enter the input string \")\n",
-    "\n",
     "print(f\"The {input_str11} has the following character counts\\n: {count_chars(input_str11)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73d72edb",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Q12. Write a function that squares numbers in a list if they are odd, using a list comprehension with a conditional.\n",
+    "Example: square_odds([1, 2, 3, 4] -> [1, 2, 9, 4])"
    ]
   },
   {
@@ -64,6 +84,16 @@
    "source": [
     "input_list12 = [1, 2, 4, 5]\n",
     "print (f\"The {input_list12} has the following sqaure odds : {square_odds(input_list12)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "261c9c79",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Q13. Write a function that rotates a list to the right by k steps using slicing.\n",
+    "Example: rotate_list([1, 2, 3, 4, 5], 2) -> [4, 5, 1, 2, 3]"
    ]
   },
   {
@@ -90,8 +120,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d490bc5f",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Q14. Write a function that takes a list of dictionaries and sorts it by the \"name\" key in ascending order\n",
+    "Example: \n",
+    "Input\n",
+    "[\n",
+    "    {\"name\": \"Bob\", \"age\": 25},\n",
+    "    {\"name\":\"Alice\", \"age\": 30}\n",
+    "]\n",
+    "\n",
+    "Output\n",
+    "[\n",
+    "    {\"name\": \"Alice\", \"age\": 30},\n",
+    "    {\"name\": \"Bob\", \"age\": 25}\n",
+    "]\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0a1749c7",
    "metadata": {},
    "outputs": [
@@ -105,10 +156,24 @@
     }
    ],
    "source": [
+    "# Q14. Write a function that takes a list of dictionaries and sorts it by the \n",
+    "#      \"name\" key in ascending order\n",
+    "\n",
     "input_list14 = [{\"name\": \"Bob\", \"age\" : 25},\n",
     "                {\"name\": \"Alice\", \"age\" : 30}]\n",
     "print(f\"The input list is {input_list14}\")\n",
     "print(f\"The output sorted list is{sort_dict(input_list14)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cdab940",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### 15. Write a function that takes a list of numbers and returns their arithmetic mean (return None for an empty list).\n",
+    "Example: average_list([4, 8]) → 6.0"
    ]
   },
   {
@@ -133,6 +198,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b1e85f59",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### 16. Write a function that returns the second-largest unique number in a list (raise an error if the list has fewer than two unique values).\n",
+    "Example: second_largest([4, 1, 7, 7, 3]) → 4"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "9764563b",
@@ -152,6 +228,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f2586dc8",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### 17. Write a function that checks whether an integer is prime.\n",
+    "Example: is_prime(11) -> True"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "83f70bb3",
@@ -168,6 +255,41 @@
    "source": [
     "input_num = 6\n",
     "print(f\"{input_num} is a Prime number {is_prime(input_num)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29edca96",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### 18. Write a function that returns a list of all prime numbers less than or equal to a given limit.\n",
+    "Example: list_primes(10) -> [2, 3, 5, 7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "dc48e354",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "The list of primes until 10 is \n",
+      " [2, 3, 5, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_num = 10\n",
+    "print(f\"The list of primes until {input_num} is \\n {list_primes(input_num)}\")"
    ]
   }
  ],
