PP-6 Repeating Q7: Checking Palindrome

--- a/incedo_questions/practice_days/12-dec/dec03.ipynb
+++ b/incedo_questions/practice_days/12-dec/dec03.ipynb
@@ -5,7 +5,9 @@
    "id": "353e4a83",
    "metadata": {},
    "source": [
-    "## Practice Date - 03rd December 2025"
+    "## Practice Date - 03rd December 2025\n",
+    "Repeating Question 7 and 8\n",
+    "---"
    ]
   },
   {
@@ -19,10 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d0e39a8e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " The given list [1, 2, 2, 3, 4, 4] after removing duplicates is [1, 2, 3, 4] \n"
+     ]
+    }
+   ],
    "source": [
     "input_list = [1, 2, 2, 3, 4, 4]\n",
     "\n",
@@ -39,13 +50,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eb6d0422",
+   "metadata": {},
+   "source": [
+    "### Q7. Write a function that checks if a string is a palindrome (case-insensitive)\n",
+    "Example: is_palindrome(\"Racecar\") -> True"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "476accdd",
+   "id": "a5e14415",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Racecaar is a Palindrome: False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Question 7"
+    "input_str7 = \"Racecar\"\n",
+    "\n",
+    "def is_palindrome(input_str: str)-> bool:\n",
+    "    i=0\n",
+    "    for char in input_str:\n",
+    "        if input_str[i] != input_str[-i]:\n",
+    "            palindrome_status = False\n",
+    "            break\n",
+    "        else:\n",
+    "            palindrome_status = True\n",
+    "            i+=1\n",
+    "    return palindrome_status\n",
+    "\n",
+    "print(f\"{input_str7} is a Palindrome: {is_palindrome(input_str7)}\")"
    ]
   }
  ],
